// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"> 1 | query wrongName { user { id name } }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Operation should follow the naming conventions, the expected name is GraphqlEslintRulesUserQuery"
`;

exports[` 2`] = `
"> 1 | query GraphqlEslintRulesUserQuery { user { id name } }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Filename should start with the component root directory name \\"graphql-eslint-rules\\""
`;

exports[` 3`] = `
"> 1 | query GraphqlEslintRulesUserQuery { user { id name } }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Filename should end with the operation name (query/mutation/subscription) e.g. foo-query.graphql"
`;
